<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
    <string name="app_name">WanAndroid</string>
    <string name="app_logo_html"><font color="#FF0000">Wan</font>Android</string>
    <string name="main">Main</string>
    <string name="blog">Blog</string>
    <string name="search">Search</string>
    <string name="project">Project</string>
    <string name="me">Me</string>
    <string name="tool">Tool</string>
    
    <string name="brvah_loading">Loading</string>
    <string name="brvah_load_failed">Loading failed, retry</string>
    <string name="brvah_load_end">no more data</string>
    <string name="is_loading">Loading...</string>
    <string name="try_another_key">anthor key</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="re_password">RePassword</string>
    <string name="login">Login</string>
    <string name="please_input_username">Input UserName</string>
    <string name="please_input_psw">Input Password</string>
    <string name="is_logining">Loging</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="is_registering">Registering</string>
    <string name="my_collection">Collections</string>
    <string name="collect">Collect</string>
    <string name="about">About</string>
    <string name="open_issue">issue</string>
    <string name="send_email">Send e-mail</string>
    <string name="sendto">QFQ61@QQ.COM</string>
    <string name="mail_topic">Wanandroid 反馈</string>
    <string name="check_update">Check Latest Version</string>
    <string name="check_update_result">This is the latest version!</string>
    <string name="license">开源协议</string>
    <string name="source_url">源代码地址</string>
    <string name="feedback">意见反馈</string>
    <string name="third_lib">第三方库</string>
    <string name="developer">开发者</string>
    <string name="lasted_project">最新项目</string>
    <string name="search_article">\u00A0\u00A0搜索文章</string>
    <string name="net_error">Net error</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_url">请输入链接</string>
    <string name="share">分享</string>
    <string name="share_article">分享文章</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="confirm">确定</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">退出登录</string>
    <string name="settings">Settings</string>
    <string name="login_or_register">登录/注册</string>
    <string name="browse_history">History</string>
    <string name="everyone_searching">大家都在搜</string>
    <string name="search_history">历史搜索</string>
    <string name="commonly_used_sites">常用网站</string>
    <string name="deleteAll">Clear</string>
    <string name="no_collection" translatable="false">no collections</string>
    <string name="no_history">没有记录</string>
    <string name="go_to_register">没有账号?那么就去注册一个吧</string>
    <string name="switch_dark_theme">Switch Dark Theme</string>
    <string name="back_press_hint">Press back again to exit</string>
    <string name="login_success">Login successfully</string>
    <string name="register_success">Regster successfully</string>
    <string name="logout_success"> Logout successfully</string>
    <string name="bug_hint">什么鬼？应用崩了？淡定淡定！\n我觉得吧，不是你手机有问题就是Android系统有问题，怎么可能是我的代码有BUG。\n现在你有下面2个解决方法：\n1.点下面的重启看下是否可以复现\n2.点下面的查看日志截图去Github提BUG（不过我还是觉得我的代码没问题，哼~）</string>
    <string name="check_log">Check log</string>
    <string name="close_app">Close App</string>
    <string name="restart_app">Restart App</string>
    <string name="happen_something">Has Happen terrible things</string>
    <string name="delete">Delete</string>
    <string name="undo">UNDO</string>
    <string name="remove_item_msg">This item has been removed!</string>
	<string name="no_network_check_and_retry">No Network, check and retry</string>
    <string name="no_data">No data</string>
</resources>
