<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="bottom"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/item_padding_left_right"
        android:paddingRight="@dimen/item_padding_left_right">

        <TextView
            android:id="@+id/licenseTv"
            style="@style/About_Tv"
            android:text="@string/license" />

        <View style="@style/Line" />

        <TextView
            android:id="@+id/sourceTv"
            style="@style/About_Tv"
            android:text="@string/source_url" />

        <View style="@style/Line" />

        <TextView
            android:id="@+id/feedbackTv"
            style="@style/About_Tv"
            android:text="@string/feedback" />

        <View style="@style/Line" />

        <TextView
            android:id="@+id/thirdLibTv"
            style="@style/About_Tv"
            android:text="@string/third_lib" />

        <View style="@style/Line" />

        <TextView
            android:id="@+id/developerTv"
            style="@style/About_Tv"
            android:text="@string/developer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/versionNameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:gravity="center_horizontal"
            tools:text="V 1.0.0"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />


    </LinearLayout>
</LinearLayout>
