<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<variable
			name="viewModel"
			type="com.tainzhi.android.wanandroid.ui.login.LoginViewModel" />
	</data>


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<include layout="@layout/title_layout" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/userNameLayout"
			style="@style/TextInputLayout"
			android:layout_marginTop="80dp"
			android:hint="@string/username">

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/userNameEt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:text="@={viewModel.userName}"
				afterTextChanged="@{viewModel.verifyInput}" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/pswLayout"
			style="@style/TextInputLayout"
			android:hint="@string/password"
			app:passwordToggleEnabled="true">

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/passwordEt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:singleLine="true"
				android:text="@={viewModel.passWord}"
				afterTextChanged="@{viewModel.verifyInput}" />

		</com.google.android.material.textfield.TextInputLayout>


		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="20dp"
			android:background="@color/colorPrimary"
			android:text="@string/login"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:enabled="@{viewModel.uiState.enableLoginButton}"
			android:onClick="@{() -> viewModel.login()}"/>

		<TextView
			android:id="@+id/registerTv"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="20dp"
			android:text="@string/go_to_register"
			android:layout_width="wrap_content"
			android:textSize="16sp" />
	</LinearLayout>

</layout>
