<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    
    <include layout="@layout/common_toolbar" />
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">
            
            <ImageView
                android:id="@+id/appIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
            
            <TextView
                android:id="@+id/versionNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:alpha="?alphaEmphasisMedium"
                android:text="@{BuildConfig.VERSION_NAME}"
                android:textAppearance="?textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="@+id/appIv"
                app:layout_constraintStart_toStartOf="@+id/appIv"
                app:layout_constraintTop_toBottomOf="@+id/appIv"
                tools:text="V 1.0.0" />
            
            <TextView
                android:id="@+id/licenseTv"
                style="@style/SettingsButton"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/license"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/versionNameTv" />
            
            <TextView
                android:id="@+id/sourceTv"
                style="@style/SettingsButton"
                android:text="@string/source_url"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/licenseTv" />
            
            <TextView
                android:id="@+id/feedbackTv"
                style="@style/SettingsButton"
                android:text="@string/feedback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sourceTv" />
            
            <TextView
                android:id="@+id/thirdLibTv"
                style="@style/SettingsButton"
                android:text="@string/third_lib"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feedbackTv" />
            
            <TextView
                android:id="@+id/developerTv"
                style="@style/SettingsButton"
                android:text="@string/developer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thirdLibTv" />
        
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

