<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tainzhi.android.wanandroid.ui.CrashActivity">
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/happen_something"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:alpha="?alphaEmphasisMedium"
        android:text="@string/bug_hint"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    
    <TextView
        android:id="@+id/checkLogTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/check_log"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/finishAppBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkLogTv">
        
        <ImageView
            android:id="@+id/bugIv"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_bug_report_24"
            android:tint="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
        
        <ScrollView
            android:id="@+id/logScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            
            <TextView
                android:id="@+id/logTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <Button
        android:id="@+id/finishAppBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/close_app"
        app:layout_constraintBottom_toTopOf="@id/restartAppBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
    
    <Button
        android:id="@+id/restartAppBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/restart_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/finishAppBtn"
        app:layout_constraintStart_toStartOf="@+id/finishAppBtn"
        app:layout_constraintTop_toBottomOf="@+id/finishAppBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>