<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true">
    
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            style="@style/Widget.AppCompat.SearchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@drawable/bg_search_view"
            app:closeIcon="@drawable/ic_baseline_clear_24"
            app:queryHint="@string/search"
            app:searchHintIcon="@drawable/search"
            app:searchIcon="@drawable/search"
            tools:ignore="RtlSymmetry">
    
        </androidx.appcompat.widget.SearchView>

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/searchRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <ScrollView
            android:id="@+id/hotContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/search_history"
                    style="?textAppearanceSubtitle2" />

                <com.zhy.view.flowlayout.TagFlowLayout
                    android:id="@+id/searchHistoryTagLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginTop="10dp"
                    app:max_select="1">

                </com.zhy.view.flowlayout.TagFlowLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/everyone_searching"
                    style="?textAppearanceSubtitle2" />
    
                <com.zhy.view.flowlayout.TagFlowLayout
                    android:id="@+id/hotTagLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    app:max_select="1">
    
                </com.zhy.view.flowlayout.TagFlowLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/commonly_used_sites"
                    style="?textAppearanceSubtitle2" />
    
                <com.zhy.view.flowlayout.TagFlowLayout
                    android:id="@+id/webTagLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    app:max_select="1">
    
                </com.zhy.view.flowlayout.TagFlowLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</LinearLayout>
